--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body{
 
 .user{
     color: white;
-    
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 /* sezione destra */
@@ -116,7 +117,20 @@ body{
     font-size: small;
 }
 
+.categorie{
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: small;
+    margin: auto;
+    margin-top: 2%;
+    color: grey;
+}
 
+.recent{
+    
+}
 
 /* 2 sezione */
 .contenitore-bottom{
