--- a/style.css
+++ b/style.css
@@ -134,6 +134,26 @@ body{
     margin-left: 2%;
 }
 
+.contenitore-brani-recenti{
+    width: calc(100/6);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 2%;
+}
+
+.copertina{
+    width: 15%;
+    margin: 1%;
+}
+
+.img-copertina{
+    width: 100%;
+}
+
+
+
+
 /* 2 sezione */
 .contenitore-bottom{
     background-color: rgb(40,40,40);
