--- a/screen.css
+++ b/screen.css
@@ -129,7 +129,8 @@
     }
 
     .categorie{
-        width: 75%;
+        width: 85%;
+        margin-top: 13%;
     }
 
     .pulsante-upgrade{
@@ -150,7 +151,8 @@
     }
 
     .categorie{
-        width: 80%;
+        width: 90%;
+        margin-top: 14%;
     }
 
     .titolo-didascalia{
@@ -172,7 +174,9 @@
     }
 
     .categorie{
-        width: 90%;
+        flex-wrap: wrap;
+        width: calc(100/4);
+        margin-top: 14%;
     }
 
     .titolo-didascalia{
@@ -184,39 +188,21 @@
     }
 
     .canzone{
-        width: 20%;
+        width: 25%;
     }
 
     .bottom-right{
         width: 20%;
+    }
+
+    .contenitore-bottom{
+        height: 15vh;
+    }
+
+    .contenitore1{
+        height: 85vh;
     }
 }
-
-@media screen and (max-width: 768px){
-    .sidebar{
-        width: 23%;
-    }
-
-    .categorie{
-        width: 95%;
-    }
-
-    .titolo-didascalia{
-        font-size: x-small;
-    }
-
-    .artista-2{
-        font-size: xx-small;
-    }
-
-    .canzone{
-        width: 25%;
-    }
-
-    .bottom-right{
-        width: 25%;
-    }
-} 
 
 @media screen and (max-width: 768px){
 
@@ -254,16 +240,18 @@
     }
 
     .contenitore-brani-recenti{
-        width: calc(100/3);
+        width: calc(100/4);
+        flex-wrap: wrap;
+        display: flex;
         flex-wrap: wrap;
     }
 
     .copertina{
-        width: 25%;
+        width: 23%;
     }
 
-    .categorie{
-        width: calc(100/4);
+    .categorie.div{
+        width: calc(100%/4);
         flex-wrap: wrap;
     }
 
@@ -271,4 +259,77 @@
         font-size: small;
     }
     
+    .artista-2{
+        font-size: xx-small;
+    }
+
+
+    .bottom-center{
+        width: 50%;
+    }
+
+    .contenitore-bottom{
+        height: 15vh;
+    }
+
+    .contenitore1{
+        height: 85vh;
+    }
+
+    .bottom-right{
+        width: 25%;
+    }
+}
+
+@media screen and (max-width: 642px){
+    .categorie.div{
+        width: calc(100%/5);
+        flex-wrap: wrap;
+    }
+
+    .categorie{
+        margin-top: 15%;
+    }
+
+    .fa-desktop,.fa-list{
+        display: none;
+    }
+
+    .bottom-right{
+        width: 30%;
+    }
+    
+    .pulsanti-musica{
+        width: 70%;
+    }
+
+    .contenitore-brani-recenti .div{
+        flex-wrap: wrap;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .copertina{
+        width: 25%;
+    }
+
+    .sidebar{
+        width: 7.5%;
+    }
+
+    .logo-small{
+        width: 100%;
+    }
+
+    .contenitore-bottom{
+        height: 15vh;
+    }
+
+    .contenitore1{
+        height: 85vh;
+    }
+
+    .canzone{
+        width: 35%;
+    }
 }
