--- a/style.css
+++ b/style.css
@@ -160,11 +160,10 @@ body{
 }
 
 .categorie{
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: wrap;
     font-size: small;
     margin: auto;
     margin-top: 7%;
@@ -172,7 +171,9 @@ body{
 }
 
 .menu-hover{
-    padding-bottom: 5%;
+/*     padding: 5%; 
+    margin-left: 5%;
+    margin-right: 5%; */
 }
 
 
@@ -185,7 +186,8 @@ body{
 
 .height40{
     height: 40px;
-
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 .recent{
@@ -196,7 +198,7 @@ body{
 }
 
 .contenitore-brani-recenti{
-    width: calc(100/6);
+    width: 96%;
     display: flex;
     flex-direction: row;
     margin: 2%;
@@ -285,9 +287,10 @@ body{
     width: 55px;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left: 3%;
+    background-position: center;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 3%;
 }
 
 /* bottom center */
